--- a/html/tab1.html
+++ b/html/tab1.html
@@ -13,6 +13,9 @@
     electrons from one point to another. The movement of charged particles
     along/through a medium (say wire) constitute current or electricity.
   </p>
+<img src="imagenes/energy.jpg" alt/>
+
+
   <li>Watt (physical unit)</li>
   <p>
     The watt (abbreviated W) is the International System of Units' (SI) standard
@@ -21,6 +24,8 @@
     isdissipated, or the rate at which electromagnetic energy is radiated,
     absorbed, or dissipated
   </p>
+  <img src="imagenes/watt.jpg" alt/>
+
   <li>Scatter plot</li>
   <p>
     A scatter chart, also called a scatter plot, is a chart that shows the
@@ -28,6 +33,8 @@
     type, allowing viewers to immediately understand a relationship or trend,
     which would be impossible to see in almost any other form.
   </p>
+  <img src="imagenes/scatter.png" alt/>
+
   <li>Linear regression</li>
   <p>
     In statistics, linear regression is a linear approach for modelling the
@@ -36,6 +43,8 @@
     regression; for more than one, the process is called multiple linear
     regression.
   </p>
+  <img src="imagenes/linear.png" alt/>
+
   <li>Renewable energy</li>
   <p>
     Is energy derived from natural sources that are replenished at a higher rate
@@ -43,4 +52,6 @@
     that are constantly being replenished. Renewable energy sources are
     plentiful and all around us.
   </p>
+  <img src="imagenes/reneware.jpg" alt/>
+
 </ol>
